Fixed getWorkablePeople() method